5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1675_2471.log
== TEST (2019-05-01 19:51:16) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos:",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 8
    z = "Baixo
             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:51:57) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos:",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:52:05) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos:",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:52:12) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos:",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:52:27) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos:",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- EXECUTION TIME:
0.153303
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0  anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25  anos e IMC 25.0
Riscos: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50  anos e IMC 25.0
Riscos: Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 19:59:04) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 19:59:42) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- EXECUTION TIME:
0.158053
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0  anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25  anos e IMC 25.0
Riscos:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50  anos e IMC 25.0
Riscos:  Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:44) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:44) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:44) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:44) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:44) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:45) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:45) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:45) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:45) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:00:45) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:01:49) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:03:07) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:03:07) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.151772
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0  anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25  anos e IMC 25.0
Riscos:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50  anos e IMC 25.0
Riscos:  Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:04:07) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:04:17) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
else:
	print("Dados invalidos")
-- EXECUTION TIME:
0.144956
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0  anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25  anos e IMC 25.0
Riscos:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50  anos e IMC 25.0
Riscos:  Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:05:23) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
elif(idade>=130)and(imc<=0)
	print("Dados invalidos")
-- ERROR:
File "XXXX", line 18
    elif(idade>=130)and(imc<=0)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:05:29) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
elif(idade>=130)and(imc<=0):
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:05:36) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
elif(idade>=130)and(imc<=0):
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:05:43) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"
print(x,idade,y,imc)
if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print("Riscos: ",z)
elif(idade>=130)and(imc<=0):
	print("Dados invalidos")
-- EXECUTION TIME:
0.164423
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0  anos e IMC 0.0
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25  anos e IMC 25.0
Riscos:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50  anos e IMC 25.0
Riscos:  Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:06:22) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:06:29) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC"

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if idade>=45:
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- EXECUTION TIME:
0.178136
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:

-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25  anos e IMC 25.0
Riscos:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50  anos e IMC 25.0
Riscos:  Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:08:16) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC "

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)and(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:09:09) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC "

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC  0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:09:15) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC "

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC  0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:09:21) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC "

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0  anos e IMC  0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:09:26) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = " anos e IMC "

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- EXECUTION TIME:
0.203749
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0  anos e IMC  0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25  anos e IMC  25.0
Riscos:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50  anos e IMC  25.0
Riscos:  Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:10:21) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = "anos e IMC"

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:10:29) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = "anos e IMC"

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- EXECUTION TIME:
0.155849
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Riscos:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Riscos:  Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:10:42) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = "anos e IMC"

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Riscos: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 20:11:07) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = "anos e IMC"

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Risco: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- OUTPUT:
Entradas:  0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 20:11:17) 
-- CODE:
idade = int(input("digite a idade: "))
imc = float(input("digite o imc: "))
x = "Entradas: "
y = "anos e IMC"

if (idade>0)and(imc>0):
	if(idade<45):
		if(imc<22):
			z = "Baixo"
		elif(imc>=22):
			z = "Medio"
	if (idade>=45):
		if(imc<22):
			z = "Medio"
		elif(imc>=22):
			z = "Alto"
	print(x,idade,y,imc)
	print("Risco: ",z)
elif(idade>=130)or(idade<=0)and(imc<=0):
	print(x,idade,y,imc)
	print("Dados invalidos")
-- EXECUTION TIME:
0.16792
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC 25.0
Risco:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC 25.0
Risco:  Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
